--- a/A1/makefile
+++ b/A1/makefile
@@ -1,16 +1,16 @@
 all: q1 q2 q3 q4
 
-q1: Q1/main.c
-	gcc -o Q1/question1 Q1/main.c
+q1: P1A1/main.c
+	gcc -o P1A1/question1 P1A1/main.c
 
-q2: Q2/main.c
-	gcc -o Q2/question2 Q2/main.c
+q2: P2A1/main.c
+	gcc -o P2A1/question2 P2A1/main.c
 
-q3: Q3/main.c
-	gcc -o Q3/question3 Q3/main.c
+q3: P3A1/main.c
+	gcc -o P3A1/question3 P3A1/main.c
 
-q4: Q4/main.c
-	gcc -lm -o Q4/question4 Q4/main.c
+q4: P4A1/main.c
+	gcc -lm -o P4A1/question4 P4A1/main.c
 
 clean:
-	rm -f Q1/*.o Q1/question1 Q2/*.o Q2/question2 Q3/*.o Q3/question3 Q4/*.o Q4/question4 
+	rm -f P1A1/*.o P1A1/question1 P2A1/*.o P2A1/question2 P3A1/*.o P3A1/question3 P4A1/*.o P4A1/question4 
