--- a/A1/makefile
+++ b/A1/makefile
@@ -10,7 +10,7 @@ q3: P3A1/main.c
 	gcc -o P3A1/question3 P3A1/main.c
 
 q4: P4A1/main.c
-	gcc -lm -o P4A1/question4 P4A1/main.c
+	gcc  -o P4A1/question4 P4A1/main.c -lm
 
 clean:
 	rm -f P1A1/*.o P1A1/question1 P2A1/*.o P2A1/question2 P3A1/*.o P3A1/question3 P4A1/*.o P4A1/question4 
